...
          ),
        }}
      />
      <Tabs.Screen
        name="journey"
        options={{
          title: '路线',
          tabBarIcon: ({ focused }) => (
            <TabIcon Icon={Route} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
        name="collection"
        options={{
          title: '工具',
          tabBarIcon: ({ focused }) => (
            <TabIcon Icon={BookOpen} focused={focused} />
          ),
        }}
      />
      <Tabs.Screen
...
